Created form to input inventory details

--- a/inventory.html
+++ b/inventory.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="inventory-header">
+        <h1>Inventory System Manager</h1>
+    </header>
+    <section class="inventory-database-container">
+
+    </section>
+    <section class="inventory-form-container">
+        <form>
+            <input type="text" name="product" id="inventory-product">
+            <input type="number" name="price" id="inventory-price">
+            <input type="number" name="stock" id="inventory-stock">
+            <button type="submit">SUBMIT</button>
+        </form>
+    </section>
+    <footer class="inventory-footer">
+
+    </footer>
 </body>
 </html>
