Written code to create, and store data into the inventory object

--- a/inventory.html
+++ b/inventory.html
@@ -17,11 +17,12 @@
             <input type="text" name="product" id="inventory-product">
             <input type="number" name="price" id="inventory-price">
             <input type="number" name="stock" id="inventory-stock">
-            <button type="submit">SUBMIT</button>
+            <button type="submit" id="submit">SUBMIT</button>
         </form>
     </section>
     <footer class="inventory-footer">
 
     </footer>
+    <script src="inventory.js"></script>
 </body>
 </html>
