Added validation for if a product already exists and further styling

--- a/inventory.html
+++ b/inventory.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inventory.css">
+    <link rel="shortcut icon" href="shopping-cart-svgrepo-com.svg" type="image/x-icon">
     <title>Inventory Management System</title>
 </head>
 <body>
     <header class="inventory-header">
-        <h1>INVENTORY SYSTEM MANAGER</h1>
+        <h1>INVENTORY SYSTEM MANAGER <img src="shopping-cart-svgrepo-com.svg"></h1>
     </header>
     <section class="inventory-database-container">
         <section class="inventory-database display">
@@ -29,6 +30,11 @@
     </section>
     <footer class="inventory-footer">
         <h3>Group 2 All rights reserved&copy</h3>
+        <p>Wahab Oluwajunilo Joshua</p>
+        <p>Musa Abdulaziz Babagana</p>
+        <p>Ekpenyong Emmanuella Effiom</p>
+        <p>Turaki Aliyum Ibrahim</p>
+        <p>Eva Precious Sarah</p>
     </footer>
     <script src="inventory.js"></script>
 </body>
